--- a/css/styles.css
+++ b/css/styles.css
@@ -7,14 +7,28 @@
 #header-nav {
   background-color: grey;
   border-radius: 0;
-  border: 2px solid black;
+  border: 0;
   position: sticky;
   margin-bottom: 10px;
 }
 
+
+.nav>li>a {
+  position: relative;
+  display: block;
+  padding: 10px 15px;
+}
+
 .navbar-collapse {
-  background-color: wheat;
+  background-color: white;
   text-align: center;
+}
+
+.menu-item{
+    width: 100%;
+    border-bottom: 1px solid black;
+    color: black;
+    font-weight: bold;
 }
 
 #menu {
